# python-jira

./: .env  .gitignore  README.md  config.yaml  pyproject.toml
docs/: adapter.md  config_manager.md  main.md  parser.md  utils.md
src/: __init__.py  main.py  preview.py
src/config/: config_manager.py
src/core/: __init__.py  adapter.py  parser.py  utils.py
tests/: test_config_manager.py  test_jira_formatter.py  test_markdown_parser.py
